--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "homepage": "https://github.com/jonguolee/space-app",
-  "name": "nasa-app",
+  "name": "space-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jonguolee.github.io/space-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-typist": "^2.0.5",
-    "web-vitals": "^1.0.1"
+    "react-router-hash-link": "^2.3.1",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
