--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
+    "react-fade-in": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
+    "react-typist": "^2.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
